New: Integration tests added for Rich Rule LWRP.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,3 +13,8 @@ suites:
     run_list:
       - "recipe[fixture::default]"
     attributes:
+
+  - name: rich_rule
+    run_list:
+      - "recipe[fixture::rich_rule]"
+    attributes:
