Add firewalld service LWRP.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,7 +11,8 @@ platforms:
 suites:
   - name: default
     run_list:
-      - "recipe[fixture::default]"
+      - "recipe[fixture::port]"
+      - "recipe[fixture::service]"
     attributes:
 
   - name: rich_rule
