Adds the ability to add or remove masquerading from zones

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,6 +14,7 @@ suites:
     run_list:
       - "recipe[fixture::port]"
       - "recipe[fixture::service]"
+      - "recipe[fixture::masquerade]"
     attributes:
 
   - name: rich_rule
