--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,8 +6,11 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: centos-7.2
+  - name: centos-7
+  - name: centos-8
   - name: ubuntu-14.04
+  - name: ubuntu-16.04
+  - name: ubuntu-18.04
 
 suites:
   - name: default
