--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,7 +7,10 @@ provisioner:
 
 platforms:
   - name: centos-7
+  - name: centos-8
   - name: ubuntu-16.04
+  - name: ubuntu-18.04
+  - name: ubuntu-20.04
 
 suites:
   - name: default
